Update index.html to improve content structure

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Dalam Perspektif Cinta</h2>
     <p>Menjelajahi tiga pilar utama dalam Islam dan bagaimana ketiganya saling berkaitan melalui perspektif cinta kepada Allah dan sesama makhluk.</p>
     <div class="quote">"Kesempurnaan iman seseorang ditunjukkan melalui kebaikan akhlaknya"</div>
-    <div class="quote-atas">— Hadits Riwayat Abu Hurairah</div>
+    <div class="quote-atas">— Hadits Riwayat Abu Hurairah —</div>
     <a href="#iman" class="scroll-down">↓</a>
   </section>
 
